# src/routes/index.ts
@@ -1,10 +1,15 @@
 import { Router } from "express";
+
+import { authenticateRoutes } from "./authenticate.routes";
 import { categoriesRoutes } from "./categories.routes";
 import { specificationsRoutes } from "./specifications.routes";
+import { usersRoutes } from "./users.routes";
 
 const router = Router();
 
-router.use("/categories",categoriesRoutes);
-router.use("/specifications",specificationsRoutes);
+router.use("/categories", categoriesRoutes);
+router.use("/specifications", specificationsRoutes);
+router.use("/users", usersRoutes);
+router.use(authenticateRoutes);
 
-export {router};
+export { router };
